src/objects/UserRole__c.object
<CustomObject>
    <description>Agile Process Management</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGlobal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Global?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInlineEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inline Edit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>Workstream__c</referenceTo>
        <relationshipName>User_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Role (Obsolete)</label>
    <nameField>
        <label>User Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Roles (Obsolete)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>